--- a/hadoop-demo/src/main/resources/application.properties
+++ b/hadoop-demo/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 
-
 #tomcat thread 200
 server.tomcat.max-threads=1000
 
-#edit tomcat port
-server.port=8900
+#edit port
+server.port=8012
 # session time 30
 server.session-timeout=60
 
 spring.application.name=hadoop
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-
 
 hdfs.path=hdfs://47.111.105.143:9000
 hdfs.username=hadoop
