--- a/base-java/src/main/resources/application.properties
+++ b/base-java/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
+db.user = root
+db.pwd = Mysql8.0
+db.DriverClass = com.mysql.jdbc.Driver
+db.url = jdbc:mysql://47.111.105.143:3306/sxfy_f
+
 
 address = China, ZheJiang, HangZhou
