--- a/base-java/src/main/resources/application.properties
+++ b/base-java/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
-db.user = root
-db.pwd = Mysql8.0
-db.DriverClass = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://47.111.105.143:3306/sxfy_f
+db.user=root
+db.pwd=Mysql-8.0
+db.driverClass=com.mysql.jdbc.Driver
+#db.driverClass=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://47.111.105.143:3306/sxfy_f
 
 
 address = China, ZheJiang, HangZhou
