声明式事务

--- a/dubbo-api-test/src/main/resources/application.properties
+++ b/dubbo-api-test/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=8081
 
+#\u6FC0\u6D3Bdev\u914D\u7F6E\u6587\u4EF6
+spring.profiles.active=dev
+
+
+person.age=3
+person.birth=2019/10/10
+person.boss=false
+person.lastName=\u674E\u56DB${random.uuid}
+person.list=1,2,3
+person.map.k1=yk1
+# person.map.v1=${person.lastName}_yyy
+
+# \u5F53\u83B7\u53D6\u4E0D\u5B58\u5728\u7684\u5C5E\u6027\u65F6\uFF0C\u4F1A\u76F4\u63A5\u5C06\u5B9A\u4E49\u7684\u5B57\u7B26\u4E32\u8D4B\u503C\uFF1A\u4E0B\u9762\u7684\u914D\u7F6E\u5982\u679C\u653E\u5F00\uFF0C\u6267\u884C\u6D4B\u8BD5\u65B9\u6CD5\u7ED3\u679C\u4E3A\uFF1Av1=${person.hello}_yyy}
+# person.map.v1=${person.hello}_yyy
+
+# \u4F7F\u7528":"\u6307\u5B9A\u9ED8\u8BA4\u503C
+person.map.v1=${person.hello:hello}_yyy
+
+
+spring.http.encod
